--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ build/
 ### VS Code ###
 .vscode/
 
-mvnw
-mvnw.cmd
-.mvn
+/mvnw.cmd
+/mvnw
+/.mvn/
+/.mvn/wrapper/maven-wrapper.properties
+/.mvn/wrapper/maven-wrapper.jar
+/.mvn/wrapper/MavenWrapperDownloader.java
