--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 server.port=8081
+spring.mandatory-file-encoding=UTF-8
+
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:4000/registration_form
+spring.datasource.username=postgres
+spring.datasource.password=4461
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
+#logging.level.root=WARN
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=ERROR
+
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
